--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Home</title>
+  </head>
+  <body>
+    <h3>Home</h3>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, officiis perspiciatis id maxime dolor nostrum,
+      omnis aliquam sapiente et unde ut quod beatae dolorum. Inventore laborum maiores nulla debitis facilis.
+    </p>
+  </body>
 </html>
