--- a/about.html
+++ b/about.html
@@ -6,6 +6,12 @@
     <title>About</title>
   </head>
   <body>
+    <header>
+        <nav>
+            <a href="index.html"></a> 
+            <a href="locations.html"></a>
+        </nav>
+    </header>
     <h2>About</h2>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis voluptas repellat quam, eos, eum consectetur
