--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Home</title>
   </head>
   <body>
+    <header>
+        <nav>
+            <a href="index.html"></a> 
+            <a href="about.html"></a>
+        </nav>
+    </header>
     <h3>Home</h3>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, officiis perspiciatis id maxime dolor nostrum,
