--- a/locations.html
+++ b/locations.html
@@ -6,6 +6,11 @@
     <title>locations</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <a href="index.html"></a> 
+            <a href="about.html"></a>
+        </nav>
+    </header>
 </body>
 </html>
