--- a/about.html
+++ b/about.html
@@ -14,8 +14,7 @@
     </header>
     <h2>About</h2>
     <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis voluptas repellat quam, eos, eum consectetur
-      cumque labore aliquam esse sed voluptatem quaerat modi ducimus suscipit accusamus rem. Impedit, harum molestiae?
+    I like tres leches
     </p>
   </body>
 </html>
